--- a/mvc/textbook-catalog/app/views/courses/show.html.erb
+++ b/mvc/textbook-catalog/app/views/courses/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Index:</strong>
-  <%= @course.index %>
+  <strong>Name:</strong>
+  <%= @course.name %>
 </p>
 
 <p>
-  <strong>Show:</strong>
-  <%= @course.show %>
+  <strong>Mnemonic:</strong>
+  <%= @course.mnemonic %>
 </p>
 
 <%= link_to 'Edit', edit_course_path(@course) %> |
