--- a/mvc/textbook-catalog/app/views/departments/_form.html.erb
+++ b/mvc/textbook-catalog/app/views/departments/_form.html.erb
@@ -12,13 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :index %>
-    <%= form.text_field :index %>
-  </div>
-
-  <div class="field">
-    <%= form.label :show %>
-    <%= form.text_field :show %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="actions">
