--- a/mvc/textbook-catalog/app/views/textbooks/show.html.erb
+++ b/mvc/textbook-catalog/app/views/textbooks/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Index:</strong>
-  <%= @textbook.index %>
+  <strong>Name:</strong>
+  <%= @textbook.name %>
 </p>
 
 <p>
-  <strong>Show:</strong>
-  <%= @textbook.show %>
+  <strong>Author:</strong>
+  <%= @textbook.author %>
 </p>
 
 <%= link_to 'Edit', edit_textbook_path(@textbook) %> |
