--- a/mvc/textbook-catalog/app/views/universities/_form.html.erb
+++ b/mvc/textbook-catalog/app/views/universities/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :index %>
-    <%= form.text_field :index %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :show %>
-    <%= form.text_field :show %>
+    <%= form.label :location %>
+    <%= form.text_field :location %>
   </div>
 
   <div class="actions">
