--- a/mvc/textbook-catalog/app/views/universities/index.html.erb
+++ b/mvc/textbook-catalog/app/views/universities/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Index</th>
-      <th>Show</th>
+      <th>Name</th>
+      <th>Location</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +14,8 @@
   <tbody>
     <% @universities.each do |university| %>
       <tr>
-        <td><%= university.index %></td>
-        <td><%= university.show %></td>
+        <td><%= university.name %></td>
+        <td><%= university.location %></td>
         <td><%= link_to 'Show', university %></td>
         <td><%= link_to 'Edit', edit_university_path(university) %></td>
         <td><%= link_to 'Destroy', university, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +26,4 @@
 
 <br>
 
-# <%= link_to 'New University', new_university_path %>
+<%= link_to 'New University', new_university_path %>
