--- a/mvc/textbook-catalog/app/views/universities/show.html.erb
+++ b/mvc/textbook-catalog/app/views/universities/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Index:</strong>
-  <%= @university.index %>
+  <strong>Name:</strong>
+  <%= @university.name %>
 </p>
 
 <p>
-  <strong>Show:</strong>
-  <%= @university.show %>
+  <strong>Location:</strong>
+  <%= @university.location %>
 </p>
 
 <%= link_to 'Edit', edit_university_path(@university) %> |
