--- a/mvc/textbook-catalog/app/views/departments/index.html.erb
+++ b/mvc/textbook-catalog/app/views/departments/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Index</th>
-      <th>Show</th>
+      <th>Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +13,7 @@
   <tbody>
     <% @departments.each do |department| %>
       <tr>
-        <td><%= department.index %></td>
-        <td><%= department.show %></td>
+        <td><%= department.name %></td>
         <td><%= link_to 'Show', department %></td>
         <td><%= link_to 'Edit', edit_department_path(department) %></td>
         <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
