--- a/mvc/textbook-catalog/app/views/departments/show.html.erb
+++ b/mvc/textbook-catalog/app/views/departments/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Index:</strong>
-  <%= @department.index %>
-</p>
-
-<p>
-  <strong>Show:</strong>
-  <%= @department.show %>
+  <strong>Name:</strong>
+  <%= @department.name %>
 </p>
 
 <%= link_to 'Edit', edit_department_path(@department) %> |
