--- a/mvc/textbook-catalog/app/views/textbooks/index.html.erb
+++ b/mvc/textbook-catalog/app/views/textbooks/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Index</th>
-      <th>Show</th>
+      <th>Name</th>
+      <th>Author</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +14,8 @@
   <tbody>
     <% @textbooks.each do |textbook| %>
       <tr>
-        <td><%= textbook.index %></td>
-        <td><%= textbook.show %></td>
+        <td><%= textbook.name %></td>
+        <td><%= textbook.author %></td>
         <td><%= link_to 'Show', textbook %></td>
         <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
         <td><%= link_to 'Destroy', textbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
