Added support for department creation and added data CSV

--- a/mvc/textbook-catalog/app/views/departments/_form.html.erb
+++ b/mvc/textbook-catalog/app/views/departments/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :university %>
+    <%= form.text_field :university %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
