--- a/mvc/textbook-catalog/app/views/departments/index.html.erb
+++ b/mvc/textbook-catalog/app/views/departments/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>University</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
     <% @departments.each do |department| %>
       <tr>
         <td><%= department.name %></td>
+        <td><%= department.university.name %></td>
         <td><%= link_to 'Show', department %></td>
         <td><%= link_to 'Edit', edit_department_path(department) %></td>
         <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
