--- a/mvc/textbook-catalog/app/assets/stylesheets/universities.scss
+++ b/mvc/textbook-catalog/app/assets/stylesheets/universities.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Universities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#search-form {
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+h2 {
+  text-align: center;
+  color: coral;
+}
