--- a/mvc/textbook-catalog/app/views/courses/show.html.erb
+++ b/mvc/textbook-catalog/app/views/courses/show.html.erb
@@ -1,14 +1,49 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<h2>Course Details </h2>
+<br/>
+
+<p align="center">
   <strong>Name:</strong>
-  <%= @course.name %>
+  <br/>
+  <%= "Name Not Found" %>
 </p>
 
-<p>
+<p align="center">
   <strong>Mnemonic:</strong>
+  <br/>
   <%= @course.mnemonic %>
 </p>
 
+<br/>
+
+<h5>Textbooks</h5>
+<br/>
+<table align="center">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Author</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @textbooks.each do |textbook| %>
+      <tr>
+        <td><%= textbook.name %></td>
+        <td><%= textbook.author %></td>
+        <td><%= link_to 'Details', textbook %></td>
+        <% if false %>
+        <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
+        <td><%= link_to 'Destroy', textbooks, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%if false %>
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
+<% end %>
