--- a/mvc/textbook-catalog/app/views/departments/show.html.erb
+++ b/mvc/textbook-catalog/app/views/departments/show.html.erb
@@ -1,9 +1,47 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<h2>Department Details</h2>
+<br/>
+
+<p align="center">
   <strong>Name:</strong>
-  <%= @department.name %>
+  <br/>
+  <%= @department.abbreviation %>
 </p>
 
-<%= link_to 'Edit', edit_department_path(@department) %> |
+<p align="center">
+  <strong>University:</strong>
+  <br/>
+  <%= @department.university.name %>
+</p>
+
+<br/>
+
+<table align="center">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Mnemonic</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <td>Course Name Not Found</td>
+        <td><%= course.mnemonic %></td>
+        <td><%= link_to 'Details', course %></td>
+        <% if false %>
+        <td><%= link_to 'Edit', edit_course_path(course) %></td>
+        <td><%= link_to 'Destroy', courses, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% if false %>
+<%= link_to 'Edit', edit_department_path(@department) %>
 <%= link_to 'Back', departments_path %>
+<% end %>
