--- a/mvc/textbook-catalog/app/views/orders/_form.html.erb
+++ b/mvc/textbook-catalog/app/views/orders/_form.html.erb
@@ -13,10 +13,15 @@
 
   <div class="field">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email , :class => "form-control" %>
+  </div>
+
+  <div class="field">
+    <%= form.label :textbook_id %>
+    <%= form.text_field :textbook_id , :class => "form-control" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
