--- a/layered/presentation/textbook-catalog/src/App.css
+++ b/layered/presentation/textbook-catalog/src/App.css
@@ -1,5 +1,14 @@
 .App {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: center;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .App-logo {
