--- a/mvc/textbook-catalog/app/views/orders/index.html.erb
+++ b/mvc/textbook-catalog/app/views/orders/index.html.erb
@@ -15,8 +15,7 @@
       <tr>
         <td><%= order.email %></td>
         <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', order, method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
