--- a/mvc/textbook-catalog/app/views/welcome/index.html.erb
+++ b/mvc/textbook-catalog/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
     <h1>Textbook Catalog</h1>
     <br/>
-    <%= link_to 'Universities>>', class: 'link', controller: 'universities' %>
+    <%= link_to 'Universities>>', { controller: :universities }, class: 'link', id: 'universities-page-link' %>
 </div>
