--- a/mvc/textbook-catalog/app/views/universities/show.html.erb
+++ b/mvc/textbook-catalog/app/views/universities/show.html.erb
@@ -36,7 +36,7 @@
       <tr>
         <td>Department Name</td>
         <td><%= department.abbreviation %></td>
-        <td><%= link_to 'Details', department %></td>
+        <td><%= link_to 'Details', department, id: department.abbreviation %></td>
         <% if false %>
         <td><%= link_to 'Edit', edit_department_path(department) %></td>
         <td><%= link_to 'Destroy', departments, method: :delete, data: { confirm: 'Are you sure?' } %></td>
