Gathered results for 25 threads

--- a/mvc/textbook-catalog/app/views/textbooks/show.html.erb
+++ b/mvc/textbook-catalog/app/views/textbooks/show.html.erb
@@ -29,7 +29,7 @@
 
 <br/>
 <div class = "button">
-<%= link_to 'Order', new_order_path(:textbook_id => @textbook.id), :class => "btn btn-primary" %>
+<%= link_to 'Order', new_order_path(:textbook_id => @textbook.id), :class => "btn btn-primary", :id => "order-button" %>
 </div>
 
 <% if false %>
