--- a/mvc/textbook-catalog/app/views/orders/_form.html.erb
+++ b/mvc/textbook-catalog/app/views/orders/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class: "btn btn-primary" %>
+    <%= form.submit class: "btn btn-primary" , id: "order_create" %>
   </div>
 <% end %>
