--- a/mvc/textbook-catalog/app/views/textbooks/_form.html.erb
+++ b/mvc/textbook-catalog/app/views/textbooks/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= submit_tag("Make Order", :id => "order_create") %>
   </div>
 <% end %>
